<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".displayHomeScreen"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="270dp">

            <Button
                android:id="@+id/Button1.1"
                android:onClick="sendMsg11"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/events"></Button>

            <Button
                android:id="@+id/Button1.2"
                android:onClick="sendMsg12"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/clubs"></Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="90dp">

            <Button
                android:id="@+id/Button2.1"
                android:onClick="sendMsg21"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/lostAndFound"></Button>

            <Button
                android:id="@+id/Button2.2"
                android:onClick="sendMsg22"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/helpDesk"></Button>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
